--- a/config.yaml
+++ b/config.yaml
@@ -2,6 +2,7 @@ baseURL: https://michaelmedford.github.io
 
 languageCode: en-us
 title: "Michael Medford, Ph.D"
+enableRobotsTXT: false
 
 # Use Hugo modules to add theme
 module:
