--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -13,8 +13,7 @@ contactInfo:
 
 # some summary about what you do
 summary:
-  - I am a System Architect
-  - I am a Software Engineer
+  - I am a Staff Software Engineer
   - I am an Astrophysicist
   - I am a Communicator
   - I am a Teacher
