Add Insight M to experiences

--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -19,7 +19,7 @@ company:
 # resume: "files/resume.pdf"
 
 # a summary about you
-summary: "I am an astrophysicist that loves building massive data processing pipelines that solve intractable problems. I have applied these skills to a diverse set of challenges ranging from scaling R&D products on cloud infrastructure to constructing calibration pipelines for the world's largest telescopes. I am at my best when working alongside other passionate collaborators toward a common goal."
+summary: "I am an astrophysicist that loves investigating, organizing and scaling big data to solve intractable problems. I have applied these skills to a diverse set of challenges ranging from scaling R&D products on cloud infrastructure to constructing calibration pipelines for the world's largest telescopes. I am at my best when working alongside other passionate collaborators toward a common goal."
 
 # your social links
 # give as many as you want. use font-awesome for the icons.
