--- a/data/en/site.yaml
+++ b/data/en/site.yaml
@@ -7,7 +7,7 @@ You can modify or distribute the theme without requiring any permission from the
 However, the theme author does not provide any warranty or takes any liability for any issue with the theme."
 
 # Meta description for your site.  This will help the search engines to find your site.
-description: "I am an astrophysicist that loves building massive data processing pipelines that solve intractable problems."
+description: "I am an astrophysicist that loves investigating, organizing and scaling big data to solve intractable problems."
 
 # specify the list of custom menus that you want to show in the top navbar.
 # # they will be separated by a divider from the main menus.
